--- a/HTML/homework1/css/style.css
+++ b/HTML/homework1/css/style.css
@@ -1,7 +1,5 @@
 ﻿body {
-	margin-top: 5px;
-	margin-left: 460px;
-	margin-right: 460px;
+	margin: 0 auto;
 	padding: 0;
 	background-color: #efefef;
 	font-size: 18px;
@@ -10,7 +8,6 @@
 
 #wrapper {
 	width: 510px;
-	height: 710px;
 	background-color: white;
 	margin: 0 auto;
 	box-shadow: 0 0 4px rgba(0, 0, 0, .5);
@@ -19,7 +16,7 @@
 h2 {
 	margin: 0;
 	text-align: center;
-	padding: 55px 0px 25px 0px;
+	padding: 55px 0 25px 0;
 }
 
 img {
@@ -39,5 +36,5 @@ div {
 }
 
 .fidback {
-	border-bottom: hidden;
+	border-bottom: none;
 }
