--- a/HTML/homework3/css/style.css
+++ b/HTML/homework3/css/style.css
@@ -19,15 +19,12 @@ body {
 .logo {
     height: 80px;
     font-size: 40px;
-    text-align: left;
-    text-decoration: none;
     color: #323232;
 }
 
 #main_menu {
     display: block;
     height: 40px;
-    list-style-type: none;
     background: linear-gradient(to top, #5e5e5e, #444343);
 }
 
@@ -40,9 +37,7 @@ body {
     display: inline-block;
     padding: 11px 0;
     width: 100px;
-    border-left: 1px solid rgba(0, 0, 0, 0);
-    border-right: 1px solid rgba(0, 0, 0, 0);
-    color: rgb(255, 255, 255);
+    color: white;
     font-size: 15px;
     text-decoration: none;
     text-align: center;
